--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <p class="lead">Consider for a moment if the dreaded dinnertime conversation went like this: “what’s for dinner?” “Chicken” “Chicken for dinner? YAY!!!”. Well, we’ve rounded up our 5 best chicken recipes, all of which are pretty easy, and super delicious.Feel the taste of chicken.</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img src="https://github.com/tradetiffin/tradetiffin/blob/main/chicken02.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></img>
+            <img src="https://github.com/tradetiffin/tradetiffin/blob/main/chicken02.jpg?raw=true" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></img>
     
           </div>
         </div>
