--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li><a href="file:///C:/Users/LAZIZ%20SALMAN%20AHMED/home.html" class="nav-link px-2 link-secondary">Home</a></li>&nbsp &nbsp &nbsp
         <li><a href="file:///C:/Users/LAZIZ%20SALMAN%20AHMED/contact%20us.html#" class="nav-link px-2 link-dark">Contact us </a></li>&nbsp &nbsp &nbsp
         <li><a href="file:///C:/Users/LAZIZ%20SALMAN%20AHMED/pricing.html" class="nav-link px-2 link-dark">Pricing</a></li> &nbsp &nbsp &nbsp  
-        <li><a href="file:///C:/Users/LAZIZ%20SALMAN%20AHMED/about%20us.html#" class="nav-link px-2 link-dark">About us</a></li> &nbsp &nbsp &nbsp    
+        <li><a href="https://github.com/tradetiffin/tradetiffin/blob/main/about%20us.html" class="nav-link px-2 link-dark">About us</a></li> &nbsp &nbsp &nbsp    
         <li><a href="#" class="nav-link px-2 link-dark">Jobs</a></li> 
       </ul>
 
