--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <p class="lead">Roti is an unleavened flatbread made with just a handful of ingredients – finely milled whole wheat flour, water and optionally ghee or oil and salt. It goes perfectly with just about every Indian entrée you can think of.</p>
           </div>
           <div class="col-md-5">
-            <img src="/tradetiffin/roti.html.html" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></img>
+            <img src="https://github.com/tradetiffin/tradetiffin/blob/main/roti01.jpg?raw=true" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></img>
     
           </div>
         </div>
@@ -242,7 +242,7 @@
             <p class="lead">This fiery dish often ordered at restaurants can now be re-created at home. Paneer, spices, tomatoes, and chillies tossed together. This dish boasts of a myriad of spices and healthy. </p>
           </div>
           <div class="col-md-5">
-            <img src="/tradetiffin/paneer.html" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></img>
+            <img src="https://github.com/tradetiffin/tradetiffin/blob/main/paneer04.jpg?raw=true" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></img>
     
           </div>
         </div>
